# nonebot-plugin-simple-gpt

./: .env.example  AGENTS.md  PLUGIN_DEV_GUIDE.md  README.md  __init__.py  chat.py  config.py  image_utils.py  models.py  plugin_config_inject.py  plugin_system.py  pyproject.toml
plugins/: __init__.py  datetime_weather.py  proactive_filter.py  remove_think.py  web_search.py
plugins/memory/: README.md  __init__.py  bank.py  debug_store.py  extractor.py  hindsight_client.py  mission.py  profile_store.py  semantic_store.py
plugins/memory/admin/: __init__.py  api.py  auth.py  query_service.py  schemas.py
plugins/memory/admin/static/: index.html
plugins/sticker/: __init__.py  extractor.py  store.py  vector_store.py
plugins/sticker/admin/: query_service.py
scripts/: export_memory.py  migrate_to_hindsight.py
utils/: deepseek_marker.py
